syntax = "proto3";

package calculator;

option java_package = "com.proto.calculator";
option java_multiple_files = true;

message CalculatorRequest {
  int64 a = 1;
  int64 b = 2;
}

message CalculatorResponse {
  int64 result = 1;
}

message NumberRequest {
  int64 number = 1;
}

message NumberResponse {
  int64 result = 1;
}

service CalculatorService {
  rpc sum(CalculatorRequest) returns (CalculatorResponse) {};

  rpc PrimeNumber(NumberRequest) returns (stream NumberResponse) {};
}
